<resources>
    <string name="facebook_app_id" translatable="false">218381495929844</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb218381495929844</string>
    <string name="google_app_secret" translatable="false">790256869378-qsg1lnl2srpm8rkpjlpj03ckvjnfo8o7.apps.googleusercontent.com</string>
    <string name="google_key_app_id" translatable="false">AIzaSyDa3hC-ffJUvfdB44KtKiqLL2z5cJDEcDM</string>
    <string name="default_notification_channel_id" translatable="false">Default FCM</string>
    <string name="MyFirebaseMessagingService" translatable="false">My Firebase Messaging Service Cloud</string>
    <string name="app_name">Hoteles Xcaret</string>
    <string name="default_hotel_name">Hoteles Xcaret</string>
    <string name="lbl_loading">Loading…</string>
    <string name="lbl_awards">Recognitions</string>
    <string name="lbl_subject">App Comment</string>
    <string name="lbl_weather_cel_selected">&#xb0;<b>C</b> / &#xb0;F</string>
    <string name="lbl_weather_faren_selected">&#xb0;C / &#xb0;<b>F</b></string>
    <string name="lbl_webcam">WebCam</string>
    <string name="lbl_close">Close</string>
    <string name="lbl_location">Location</string>
    <string name="lbl_recomendations">Recomendations</string>
    <string name="lbl_destination_activities">Destination Activities</string>
    <string name="lbl_warnings">Warnings</string>
    <string name="lbl_rooms">Suites</string>
    <string name="lbl_restaurants">Restaurants</string>
    <string name="lbl_bar_snacks">Bar &amp; Snack</string>
    <string name="lbl_gastronomy">Gastronomy:</string>
    <string name="lbl_available_in">Available in:</string>
    <string name="lbl_day">Day</string>
    <string name="lbl_afternoon">Afternoon</string>
    <string name="lbl_night">Night</string>
    <string name="lbl_floors">Floors</string>
    <string name="lbl_floor">Floor</string>
    <string name="lbl_title_web_cam">Discover the weather webcams at:</string>
    <string name="lbl_title_about">Hotel Xcaret México</string>
    <string name="lbl_include">Include</string>
    <string name="lbl_welcome_to">Welcome to</string>
    <string name="lbl_welcome">Welcome</string>
    <string name="lbl_reservation">Reservation</string>
    <string name="lbl_parks">"Xcaret, Xel-Há, Xplor, Xplor Fuego, Xavage, Xoximilco,\nXenses, Xenotes y Xixen Tours"</string>
    <string name="lbl_pools">Swimming pool</string>
    <string name="lbl_call_us_from">Call us from</string>
    <string name="lbl_select_your_language">Select your language</string>
    <string name="lbl_select">Select</string>
    <string name="alert_empty_search">We did not find any results, retry!</string>
    <string name="alert_location_outsite">Location outside Hotel Xcaret México</string>
    <string name="company_name">Grupo Xcaret</string>
    <string name="footer">Copyright %1$s\nVersion %2$s</string>
    <string name="field_required">Required</string>
    <string name="field_password_error">Incorrect password</string>
    <string name="field_confirm_password_error">Password does not match</string>
    <string name="field_confirm_email_error">Email does not match</string>
    <string name="field_email_error">Incorrect email</string>
    <string name="field_pass_not_match">Password not match</string>
    <string name="place_holder_country">Country / Region</string>
    <string name="place_holder_state">State</string>
    <string name="lbl_nav_home">Home</string>
    <string name="lbl_nav_map">Map</string>
    <string name="lbl_nav_all_inclusive">AFI</string>
    <string name="lbl_nav_menu">Menu</string>
    <string name="afi">All Fun Inclusive</string>
    <string name="afi_title">FULL access to</string>
    <string name="afi_note">In additional to food and beverages, transportation between parks and airport shuttles.</string>
    <string name="afi_question_title">What park will you visit?</string>
    <string name="profile_language">Language</string>
    <string name="profile_call_us">Call us</string>
    <string name="profile_write_us">Write us</string>
    <string name="profile_rate_our_app">Rate our app</string>
    <string name="profile_about">About</string>
    <string name="profile_grupo_xcaret_parks">Download the XCARET! App</string>
    <string name="profile_terms_conditions">Terms and conditions</string>
    <string name="profile_notice_privacy">Notice of privacy</string>
    <string name="profile_faqs">FAQs</string>
    <string name="lbl_faqs">Frecuently Asked Questions</string>
    <string name="profile_dark_theme">Dark theme</string>
    <string name="lbl_services_on_board">Services on board</string>
    <string name="lbl_whats_include_tour">What does this tour include?</string>
    <string name="lbl_destination">Destination</string>
    <string name="lbl_map">Map</string>
    <string name="lbl_bus_name">Bus Name</string>
    <string name="lbl_ask_conceirge_benefits">Ask your concierge about your special benefits in the best establishments on the island</string>
    <string name="lbl_main_attractions">Main attractions*</string>
    <string name="lbl_activities_not_included">*Activities not included or operated by Xcaret group</string>
    <string name="lbl_must_show_bracelet">*You must show the bracelet that we will give you when boarding our transportation</string>
    <string name="lbl_info_saved_correct">Your information was saved correctly.</string>
    <string name="lbl_info_saved_error">An error occurred while storing the information, please try again later.</string>
    <string name="rkey_about">about</string>
    <string name="rkey_welcome">welcome</string>
    <string name="rkey_welcome_to">welcome_to</string>
    <string name="rkey_afi_title">afi_title</string>
    <string name="rkey_afi_note">afi_note</string>
    <string name="rkey_afi_question_title">afi_question_title</string>
    <string name="rkey_profile_language">profile_language</string>
    <string name="rkey_profile_call_us">profile_call_us</string>
    <string name="rkey_profile_write_us">profile_write_us</string>
    <string name="rkey_profile_rate_our_app">profile_rate_our_app</string>
    <string name="rkey_profile_about">profile_about</string>
    <string name="rkey_profile_grupo_xcaret_parks">profile_grupo_xcaret_parks</string>
    <string name="rkey_profile_terms_conditions">profile_terms_conditions</string>
    <string name="rkey_profile_notice_privacy">profile_notice_privacy</string>
    <string name="rkey_profile_faqs">profile_faqs</string>
    <string name="rkey_lbl_faqs">lbl_faqs</string>
    <string name="rkey_profile_dark_theme">profile_dark_theme</string>
    <string name="rkey_terms_condition_content">terms_conditions_content</string>
    <string name="rkey_notice_privacy_content">notice_privacy_content</string>
    <string name="rkey_awards">awards</string>
    <string name="rkey_see_all">see_all</string>
    <string name="rkey_weather_day">weather_day</string>
    <string name="rkey_weather_middle">weather_middle</string>
    <string name="rkey_weather_night">weather_night</string>
    <string name="rkey_map_search">map_search</string>
    <string name="rkey_room_title">room_title</string>
    <string name="rkey_casas_title">casas_title</string>
    <string name="rkey_restaurants_title">restaurants_title</string>
    <string name="rkey_location">location</string>
    <string name="rkey_bar_snacks">bar_snacks</string>
    <string name="rkey_select_your_language">select_your_language</string>
    <string name="rkey_riviera_maya">riviera_maya</string>
    <string name="rkey_webcam">webcam</string>
    <string name="rkey_gastronomy">gastronomy</string>
    <string name="rkey_recomendation">recomendation</string>
    <string name="rkey_warnings">warnings</string>
    <string name="rkey_include">include</string>
    <string name="rkey_close">close</string>
    <string name="rkey_menu_home">menu_home</string>
    <string name="rkey_menu_map">menu_map</string>
    <string name="rkey_menu_afi">menu_afi</string>
    <string name="rkey_menu_profile">menu_profile</string>
    <string name="rkey_room_available">room_available</string>
    <string name="rkey_alert_empty_search">alert_empty_search</string>
    <string name="rkey_levels">levels</string>
    <string name="rkey_level">level</string>
    <string name="rkey_all_fun_inclusive">all_fun_inclusive</string>
    <string name="rkey_lbl_title_web_cam">lbl_title_web_cam</string>
    <string name="rkey_title_about">title_about</string>
    <string name="rkey_reservation">reservation</string>
    <string name="rkey_parks">parks</string>
    <string name="rkey_pools">swimming_pool</string>
    <string name="rkey_call_us_from">call_us_from</string>
    <string name="rkey_lbl_services_on_board">lbl_services_on_board</string>
    <string name="rkey_lbl_whats_include_tour">lbl_whats_include_tour</string>
    <string name="rkey_lbl_destination">lbl_destination</string>
    <string name="rkey_lbl_map">lbl_map</string>
    <string name="rkey_lbl_bus_name">lbl_bus_name</string>
    <string name="rkey_lbl_ask_conceirge_benefits">lbl_ask_conceirge_benefits</string>
    <string name="rkey_lbl_main_attractions">lbl_main_attractions</string>
    <string name="rkey_lbl_activities_not_included">lbl_activities_not_included</string>
    <string name="rkey_lbl_must_show_bracelet">lbl_must_show_bracelet</string>
    <string name="rkey_lbl_info_saved_correct">lbl_info_saved_correct</string>
    <string name="rkey_lbl_info_saved_error">lbl_info_saved_error</string>
    <string name="login">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_with">Sign up as</string>
    <string name="enter_guest">Enter as guest</string>
    <string name="forgot_password_title">Forgot password</string>
    <string name="forgot_password_message">Don\'t worry, recovering your password is easy! enter your email and continue with the next steps.</string>
    <string name="password_recovery_title">Password recovery</string>
    <string name="password_recovery_msg">Please enter the code that was sent\nto your email and your new password.</string>
    <string name="password_recovery_send_code">If you did not receive the email, send it again.</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="btn_accept">Accept</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_send">Send</string>
    <string name="btn_create">Create</string>
    <string name="btn_edit_profile">Edit my profile</string>
    <string name="verification_account_title">Account verification</string>
    <string name="verification_account_msg">Please enter the code that was sent\nto your email</string>
    <string name="btn_verify">Verify</string>
    <string name="profile_picture_title">Set profile picture</string>
    <string name="take_photo">Take a photo</string>
    <string name="choose_photo">Choose a photo</string>
    <string name="rkey_email">email</string>
    <string name="rkey_forgot_password_title">forgot_password_title</string>
    <string name="rkey_forgot_password_message">forgot_password_message</string>
    <string name="rkey_password_recovery_send_code">password_recovery_send_code</string>
    <string name="rkey_btn_cancel">btn_cancel</string>
    <string name="rkey_btn_send">btn_send</string>
    <string name="rkey_verification_account_title">verification_account_title</string>
    <string name="rkey_verification_account_msg">verification_account_msg</string>
    <string name="rkey_btn_verify">btn_verify</string>
    <string name="rkey_profile_picture_title">profile_picture_title</string>
    <string name="rkey_take_photo">take_photo</string>
    <string name="rkey_choose_photo">choose_photo</string>
</resources>