<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundAlert"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="@dimen/margin_large"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.xcaret.xcaret_hotel.view.config.labelview.view.LabelView
                android:layout_margin="@dimen/margin_large"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:layout_gravity="center"
                android:textSize="@dimen/size_text_content"
                android:text="@string/profile_picture_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:key="@string/rkey_profile_picture_title"/>

            <View
                android:background="@android:color/darker_gray"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <com.xcaret.xcaret_hotel.view.config.labelview.view.LabelView
                android:id="@+id/btnTakePhoto"
                android:layout_marginTop="@dimen/margin_large_x"
                android:layout_marginHorizontal="@dimen/margin_large"
                android:textColor="@android:color/black"
                android:layout_gravity="center"
                android:textSize="@dimen/size_text_content"
                android:text="@string/take_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:key="@string/rkey_take_photo"/>

            <com.xcaret.xcaret_hotel.view.config.labelview.view.LabelView
                android:id="@+id/btnChoosePhoto"
                android:layout_marginTop="@dimen/margin_large"
                android:textColor="@android:color/black"
                android:layout_gravity="center"
                android:textSize="@dimen/size_text_content"
                android:text="@string/choose_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:key="@string/rkey_choose_photo"/>

            <com.xcaret.xcaret_hotel.view.config.labelview.view.LabelView
                android:id="@+id/btnCancel"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_large_x"
                android:textColor="@android:color/black"
                android:layout_gravity="center"
                android:textSize="@dimen/size_text_content"
                android:text="@string/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:key="@string/rkey_btn_cancel"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>