<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground1"
    android:id="@+id/layoutMain"
    tools:context=".view.security.ui.ForgotPasswordDialog">

    <View
        android:id="@+id/statusBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_short"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_shadow_large"
        android:background="@drawable/shadow_bottom_bar"
        android:translationY="8dp"
        app:layout_constraintBottom_toTopOf="@id/layoutContent"/>

    <com.xcaret.xcaret_hotel.view.config.shapeofview.shapes.RoundRectView
        android:id="@+id/layoutContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:shape_roundRect_topRightRadius="@dimen/margin_large"
        app:shape_roundRect_topLeftRadius="@dimen/margin_large"
        app:layout_constraintTop_toBottomOf="@id/statusBar"
        app:layout_constraintBottom_toTopOf="@id/auxNavigation">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@drawable/gradient_windows"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/txtClose"
                app:tint="@color/colorIconClose"
                android:src="@drawable/ic_baseline_close_24"
                android:layout_margin="@dimen/margin_default"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="@dimen/margin_short"
                android:layout_width="40dp"
                android:layout_height="40dp"/>

            <com.xcaret.xcaret_hotel.view.config.labelview.view.LabelView
                android:id="@+id/txtTitle"
                style="@style/AppTheme.TitleH1"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_large_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtClose"
                android:text="@string/forgot_password_title"
                app:key="@string/rkey_forgot_password_title"/>

            <com.xcaret.xcaret_hotel.view.config.labelview.view.LabelView
                android:id="@+id/txtMessage"
                style="@style/AppTheme.TextContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password_message"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginHorizontal="@dimen/margin_large_x"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@id/txtTitle"
                app:key="@string/rkey_forgot_password_message"/>

            <com.xcaret.xcaret_hotel.view.config.neumorphism.NeumorphCardView
                android:id="@+id/layoutEmail"
                style="@style/Widget.Neumorph.InputView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtMessage">

                <com.xcaret.xcaret_hotel.view.config.inputview.view.InputView
                    android:id="@+id/etUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_large"
                    android:layout_marginVertical="@dimen/margin_short"
                    android:background="@null"
                    android:hint="@string/email"
                    android:inputType="textWebEmailAddress|textEmailAddress"
                    android:lines="1"
                    android:maxLines="1"
                    android:padding="@dimen/margin_mini_x"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/size_text_content"
                    app:key_hint="@string/rkey_email" />


            </com.xcaret.xcaret_hotel.view.config.neumorphism.NeumorphCardView>

            <com.xcaret.xcaret_hotel.view.config.neumorphism.NeomorphFrameLayout
                android:id="@+id/btnSend"
                style="@style/Widget.Neumorph.BlueButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_large_x"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_gravity="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutEmail">

                <com.xcaret.xcaret_hotel.view.config.labelview.view.LabelView
                    style="@style/AppTheme.TextContent"
                    android:text="@string/btn_send"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="@dimen/margin_default"
                    app:key="@string/rkey_btn_send"/>

            </com.xcaret.xcaret_hotel.view.config.neumorphism.NeomorphFrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.xcaret.xcaret_hotel.view.config.shapeofview.shapes.RoundRectView>

    <View
        android:id="@+id/auxNavigation"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/colorBackgroundNavigation_Aux"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>